撰寫 API文件，限制圖片格式大小
